# dkml-installer-opam

./: README.md  dkml-installer-offline-opam.opam  dkml-installer-offline-opam.opam.template  dune-project
.github/workflows/: package.yml
ci/: build-test.sh
contributors/: BINARY_SIGNING_uTrust.md  sign.sh
installer/src/: dune  private_common.ml  version.ml
installer/winget/: README.md
installer/winget/manifest/: Diskuv.opam.installer.yaml  Diskuv.opam.locale.en-US.yaml  Diskuv.opam.yaml
